tdf#155751: dBase: BETWEEN won't include first and last value in queries

Since the beginning:
commit 86c5930e98a48fef73253535fa7508c187a093f0
Author: Jens-Heiner Rechtien <hr@openoffice.org>
Date:   Mon Aug 2 16:04:09 2004 +0000

    INTEGRATION: CWS insight01 (1.19.14); FILE MERGED
    2004/06/03 14:48:29 oj 1.19.14.3: #i18836# imple between key word
    2004/05/28 11:16:26 oj 1.19.14.2: RESYNC: (1.19-1.20); FILE MERGED
    2004/05/12 10:48:11 oj 1.19.14.1: change SQLFilterOperator

Change-Id: I75d00c313072e08279ca2f37cb65bb3414447d16
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173036
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 403075b4614d2926a07cb43806c3e9ef311ee779)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173015
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 23e9fe3b8f71f7d47b0e4a132252efb91cac9e6d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173018
(cherry picked from commit 22feec2dd97dd4db9a81b26e248303f9921de6cc)